--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+*.mkv
+*.mka
+*.mp4
+*.avc
+*.aac
+*.index
+*.ffindex
+*.torrent
+private.properties
+
+stuff
+.vscode
+.gradle
+results
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
